fix prod build
